# alembic-postgress

./: .env  Readme.md  alembic.ini  main.py  pyproject.toml
alebic-postgress/: env.py
alebic-postgress/versions/: 7f453a0eed72_create_todos_table.py  e8829b176230_change_complete_colum.py
config/: database.py
model/: todo_model.py  userModel.py
